                      User-Visible AFS::PAG Changes

AFS::PAG 1.02 (2014-07-26)

    Rename NEWS to Changes to match the normal Perl convention.

    Add repository and bugtracker information in the distribution
    metadata.

AFS::PAG 1.01 (2013-10-06)

    Define the correct preprocessor symbols to build properly if a libkafs
    or libkopenafs library was found.

    Mark autodie required for configure and use for correct automated
    testing behavior on Perl 5.10.0.  (autodie was added to core in
    5.10.1.)

AFS::PAG 1.00 (2013-09-12)

    Initial public release with support for libkafs, libkopenafs, and
    Linux systems with no support library.  pioctl is not yet supported,
    only hasafs, haspag, setpag, and unlog.  The build system has only
    been tested on Debian.