@@ -9,7 +9,7 @@
 # The canonical version of this file is maintained in the rra-c-util package,
 # which can be found at <http://www.eyrie.org/~eagle/software/rra-c-util/>.
 #
-# Written by Russ Allbery <rra@cpan.org>
+# Written by Russ Allbery <eagle@eyrie.org>
 # Copyright 2011, 2012, 2013
 #     The Board of Trustees of the Leland Stanford Junior University
 #
