@@ -5,8 +5,8 @@
 # The canonical version of this file is maintained in the rra-c-util package,
 # which can be found at <http://www.eyrie.org/~eagle/software/rra-c-util/>.
 #
-# Written by Russ Allbery <rra@cpan.org>
-# Copyright 2013
+# Written by Russ Allbery <eagle@eyrie.org>
+# Copyright 2013, 2014
 #     The Board of Trustees of the Leland Stanford Junior University
 #
 # Permission is hereby granted, free of charge, to any person obtaining a
@@ -34,9 +34,13 @@ use warnings;
 use lib 't/lib';
 
 use Test::More;
-use Test::RRA qw(use_prereq);
+use Test::RRA qw(skip_unless_automated use_prereq);
 use Test::RRA::Config qw(@POD_COVERAGE_EXCLUDE);
 
+# Skip for normal user installs since this doesn't affect functionality.
+skip_unless_automated('POD coverage tests');
+
+# Load prerequisite modules.
 use_prereq('Test::Pod::Coverage');
 
 # Test everything found in the distribution.
